HelloUltraviolet/Fixtures/RejectedSource/Keys/KeyEscapePrecedence/Source/Main.uv
//! Rejected key-system specimen for key escape diagnostic precedence.

public procedure keyEscapePrecedenceReference() -> i32 {
    var shared_value: shared i32 = 1
    #shared_value read {
        defer {
            let delayed = shared_value
        }
    }
    return 0
}
